display filter above pagination (fixed z-index of collapse-item)

--- a/assets/scss/hubble/components/product-listing-filter.scss
+++ b/assets/scss/hubble/components/product-listing-filter.scss
@@ -42,7 +42,7 @@
       .collapse-item {
         position: absolute;
         width: 250px;
-        z-index: 1;
+        z-index: 20;
         background: #fff;
         border: 1px solid $border-color;
         margin-top: 10px;
